--- a/.github/workflows/worker.yml
+++ b/.github/workflows/worker.yml
@@ -2,7 +2,7 @@ name: Helldivers2 Data Pipeline Worker
 
 on:
   schedule:
-    - cron: '0 * * * *'  # Runs daily at midnight UTC
+    - cron: '0 * * * *'  # Runs hourly at XX:00
   workflow_dispatch:  # Allows manual triggering
 
 jobs:
@@ -11,7 +11,7 @@ jobs:
 
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -34,7 +34,7 @@ jobs:
           python ingest_data.py
 
       - name: Upload Logs as Artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: pipeline-logs
           path: pipeline.log
